# cad-structural-lab

./: .gitignore  README.md  catalog.jsonl  mise.toml
.mise/tasks/: catalog  fit  fit-cfs-joist  fit-wall  fit-wall-above  fit-wall-ca  probe  probe-all  src-get
fixtures/ifc/: README.md
harness/faer/: Cargo.toml
harness/faer/src/: main.rs
harness/frame-on-faer/: Cargo.toml
harness/frame-on-faer/src/: main.rs
harness/gemlab/: Cargo.toml
harness/gemlab/src/: main.rs
harness/trussx/: Cargo.toml
harness/trussx/src/: main.rs
notes/: findings.md  ifc-bridge.md  jurisdictions.md  quaddeck-fit.md  wall-capacity.md
